--- a/.env
+++ b/.env
@@ -1,25 +1,25 @@
 APP_NAME=https://dlk.express-diz.ru
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:QSZQR0anDnaN8TjlZRImUjG22RnFOrhS5XJWAXATocA=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://dlk.express-diz.ru
-
-# База данных
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=express
-# DB_USERNAME=root
-# DB_PASSWORD=
-
 
 # База данных
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=cw14413_lknew
-DB_USERNAME=cw14413_lknew
-DB_PASSWORD="2347890Aa"
+DB_DATABASE=express
+DB_USERNAME=root
+DB_PASSWORD=
+
+
+# База данных
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=cw14413_lknew
+# DB_USERNAME=cw14413_lknew
+# DB_PASSWORD="2347890Aa"
 
 
 # Файловая система
@@ -76,4 +76,5 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-FIREBASE_SERVER_KEY=YOUR_FIREBASE_SERVER_KEY
+# Firebase
+FIREBASE_SERVER_KEY=YOUR_FIREBASE_SERVER_KEY_HERE
